crates/dekaf/src/snapshots/dekaf__log_appender__tests__session_logger_and_task_name.snap
---
source: crates/dekaf/src/log_appender.rs
expression: captured_logs
---
[
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_appender::tests"
    },
    "level": "info",
    "message": "Test log data before setting name, you should see me",
    "shard": {
      "build": "11:22:33:44:55:66:77:88",
      "keyBegin": "00000000",
      "kind": "materialization",
      "name": "my_task",
      "rClockBegin": "00000000"
    },
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_appender::tests"
        },
        "level": "info",
        "message": "test_session",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  },
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_appender::tests",
      "task_name": "my_task"
    },
    "level": "info",
    "message": "Test log data with a task name!",
    "shard": {
      "build": "11:22:33:44:55:66:77:88",
      "keyBegin": "00000000",
      "kind": "materialization",
      "name": "my_task",
      "rClockBegin": "00000000"
    },
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_appender::tests",
          "task_name": "my_task"
        },
        "level": "info",
        "message": "test_session",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  }
]
