crates/dekaf/src/snapshots/dekaf__log_appender__tests__test_stats.snap
---
source: crates/dekaf/src/log_appender.rs
expression: captured_logs
---
[
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "materialize": {
      "test_collection": {
        "lastSourcePublishedAt": "1970-01-01T00:00:06.000000007+00:00",
        "left": {
          "bytesTotal": 2,
          "docsTotal": 1
        },
        "out": {
          "bytesTotal": 6,
          "docsTotal": 5
        },
        "right": {
          "bytesTotal": 4,
          "docsTotal": 3
        }
      }
    },
    "shard": {
      "build": "11:22:33:44:55:66:77:88",
      "keyBegin": "00000000",
      "kind": "materialization",
      "name": "my_task",
      "rClockBegin": "00000000"
    },
    "ts": "[ts]"
  }
]
