crates/dekaf/src/snapshots/dekaf__log_appender__tests__test_stats_partial_logs.snap
---
source: crates/dekaf/src/log_appender.rs
expression: captured_logs
---
[
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_appender",
      "stats": "Binding { left: Some(DocsAndBytes { docs_total: 1, bytes_total: 0 }), right: None, out: None }",
      "task_name": "my_task"
    },
    "level": "error",
    "message": "Invalid stats document emitted! Cannot emit 0 for `bytes_total` or `docs_total`!",
    "shard": {
      "keyBegin": "00000000",
      "kind": "materialization",
      "name": "my_task",
      "rClockBegin": "00000000"
    },
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_appender::tests",
          "task_name": "my_task"
        },
        "level": "info",
        "message": "test_session",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  }
]
